Refactor existing test cases (#769)
* Refactor existing test cases

---------

Co-authored-by: khanhtranduy <130121475+khanhtranduy@users.noreply.github.com>