@@ -1,127 +1,199 @@
 package com.yas.product.controller;
 
-import com.yas.product.exception.BadRequestException;
-import com.yas.product.exception.NotFoundException;
 import com.yas.product.model.Brand;
 import com.yas.product.model.Product;
-import com.yas.product.service.BrandService;
 import com.yas.product.repository.BrandRepository;
+import com.yas.product.repository.ProductRepository;
 import com.yas.product.viewmodel.brand.BrandPostVm;
 import com.yas.product.viewmodel.brand.BrandVm;
-import org.junit.jupiter.api.Assertions;
+import com.yas.product.viewmodel.error.ErrorVm;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.util.UriComponentsBuilder;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.MatcherAssert.assertThat;
-import java.util.*;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.*;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.web.reactive.server.EntityExchangeResult;
+import org.springframework.web.reactive.function.BodyInserters;
 
-public class BrandControllerTest {
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.*;
+
+public class BrandControllerTest extends BaseControllerTest{
+    @Autowired
     private BrandRepository brandRepository;
-    private BrandService brandService;
-    private BrandController brandController;
+    @Autowired
+    private ProductRepository productRepository;
+
     private final Brand brand1 = new Brand();
+    private Long brandId;
+
+    private final String STORE_FRONT_URL = "/storefront/brands";
+    private final String BACK_OFFICE_URL = "/backoffice/brands";
+    private Long invalidId = 9999L;
 
     @BeforeEach
-    void init(){
-        brandRepository = mock(BrandRepository.class);
-        brandService =  mock(BrandService.class);
-        brandController = new BrandController(brandRepository, brandService );
-        brand1.setId(1L);
-        brand1.setName("dien thoai");
-        brand1.setSlug("dien-thoai");
+    void setup() {
+        super.setup();
+        brand1.setName("iphone13");
+        brand1.setSlug("iphone-13");
         brand1.setProducts(List.of());
+        brandId = brandRepository.save(brand1).getId();
+    }
+
+    @AfterEach
+    void tearDown() {
+        productRepository.deleteAll();
+        brandRepository.deleteAll();
     }
 
     @Test
-    void listBrands_ReturnList_Success() {
-        Brand brand2 = new Brand();
-        brand2.setId(2L);
-        brand2.setName("ao quan");
-        brand2.setSlug("ao-quan");
-        List<Brand> brands= new ArrayList<>(Arrays.asList(brand1,brand2));
-        when(brandRepository.findAll()).thenReturn(brands);
-        ResponseEntity<List<BrandVm>> result = brandController.listBrands();
-        assertThat(result.getStatusCode(),is(HttpStatus.OK));
-        assertEquals(Objects.requireNonNull(result.getBody()).size(), brands.size());
-        for(int i=0;i<brands.size();i++){
-            assertEquals(result.getBody().get(i).slug(), brands.get(i).getSlug());
-            assertEquals(result.getBody().get(i).name(), brands.get(i).getName());
-        }
+    void listBrands_StoreFrontReturnList_Success() {
+        EntityExchangeResult<List<BrandVm>> result =
+                webTestClient.get().uri(STORE_FRONT_URL)
+                        .accept(MediaType.APPLICATION_JSON).exchange()
+                        .expectStatus().isOk()
+                        .expectBodyList(BrandVm.class)
+                        .returnResult();
+        List<BrandVm> brandVms = result.getResponseBody();
+        assertEquals(1, brandVms.size());
+        assertEquals(brand1.getName(), brandVms.get(0).name());
+        assertEquals(brand1.getSlug(), brandVms.get(0).slug());
     }
 
     @Test
-    void getBrand_FindIdBrand_ThrowException(){
-        when(brandRepository.findById(1L)).thenReturn(Optional.empty());
-        NotFoundException exception = Assertions.assertThrows(NotFoundException.class,
-                () -> brandController.getBrand(1L));
-        assertThat(exception.getMessage(),is("Brand 1 is not found"));
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void listBrands_BackOfficeReturnList_Success() {
+        EntityExchangeResult<List<BrandVm>> result =
+                webTestClient
+                        .get().uri(BACK_OFFICE_URL)
+                        .accept(MediaType.APPLICATION_JSON)
+                        .exchange()
+                        .expectStatus().isOk()
+                        .expectBodyList(BrandVm.class)
+                        .returnResult();
+        List<BrandVm> brandVms = result.getResponseBody();
+        assertEquals(1, brandVms.size());
+        assertEquals(brand1.getName(), brandVms.get(0).name());
+        assertEquals(brand1.getSlug(), brandVms.get(0).slug());
     }
 
     @Test
-    void getBrand_FindIdBrand_Success(){
-        when(brandRepository.findById(1L)).thenReturn(Optional.of(brand1));
-        ResponseEntity<BrandVm> result = brandController.getBrand(1L);
-        assertEquals(Objects.requireNonNull(result.getBody()).name(), brand1.getName());
-        assertEquals(result.getBody().slug(), brand1.getSlug());
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void getBrand_FindIdBrand_Return404NotFound() {
+        ErrorVm errorVmExpected = new ErrorVm("404 NOT_FOUND", "Not Found", "Brand 9999 is not found", Collections.emptyList());
+
+        webTestClient.get().uri(BACK_OFFICE_URL + "/{id}", invalidId)
+                .accept(MediaType.APPLICATION_JSON)
+                .exchange()
+                .expectStatus().isNotFound()
+                .expectBody(ErrorVm.class).isEqualTo(errorVmExpected);
     }
 
     @Test
-    void createBrand_SaveBrandPostVm_Success(){
-        BrandPostVm brandPostVm = new BrandPostVm("samsung","samsung", false);
-        Brand savedBrand = brandPostVm.toModel();
-        savedBrand.setId(1L);
-        when(brandService.create(any())).thenReturn(savedBrand);
-        ResponseEntity<BrandVm> result = brandController.createBrand(brandPostVm, UriComponentsBuilder.fromPath("/brands/{id}"));
-        assertEquals(Objects.requireNonNull(result.getBody()).name(), brandPostVm.name());
-        assertEquals(result.getBody().slug(), brandPostVm.slug());
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void getBrand_FindIdBrand_Success() {
+        EntityExchangeResult<BrandVm> result = webTestClient.get().uri(BACK_OFFICE_URL + "/{id}", brandId)
+                .accept(MediaType.APPLICATION_JSON)
+                .exchange()
+                .expectStatus().isOk()
+                .expectBody(BrandVm.class)
+                .returnResult();
+        BrandVm brandVm = result.getResponseBody();
+        assertNotNull(brandVm);
+        assertEquals(brand1.getName(), brandVm.name());
+        assertEquals(brand1.getSlug(), brandVm.slug());
     }
 
     @Test
-    void updateBrand_FindIdBrandUpdate_ThrowException(){
-        BrandPostVm brandPostVm = new BrandPostVm("samsung","samsung", false);
-        when(brandService.update(any(), anyLong())).thenThrow(new NotFoundException("Brand 1 is not found"));
-        NotFoundException exception = Assertions.assertThrows(NotFoundException.class,
-                () -> brandController.updateBrand(1L, brandPostVm));
-        assertThat(exception.getMessage(),is("Brand 1 is not found"));
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void createBrand_SaveBrandPostVm_Success() {
+        BrandPostVm brandPostVm = new BrandPostVm("samsung", "samsung", true);
+        EntityExchangeResult<BrandVm> result = webTestClient
+                .post().uri(BACK_OFFICE_URL)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(BodyInserters.fromValue(brandPostVm))
+                .exchange()
+                .expectStatus().isCreated()
+                .expectBody(BrandVm.class)
+                .returnResult();
+        BrandVm brandVm = result.getResponseBody();
+        assertNotNull(brandVm);
+        assertEquals(brandPostVm.name(), brandVm.name());
+        assertEquals(brandPostVm.slug(), brandVm.slug());
     }
 
     @Test
-    void updateBrand_UpdateBrand_Success(){
-        BrandPostVm brandPostVm = new BrandPostVm("samsung","samsung", false);
-        when(brandRepository.findById(1L)).thenReturn(Optional.of(brand1));
-        brandRepository.findById(1L).get().setSlug(brandPostVm.slug());
-        brandRepository.findById(1L).get().setName(brandPostVm.name());
-        when(brandRepository.save(brand1)).thenReturn(brand1);
-        assertThat(brand1.getName(), is(brandPostVm.name()));
-        assertThat(brand1.getSlug(), is(brandPostVm.slug()));
-        ResponseEntity<Void> result = brandController.updateBrand(1L,brandPostVm);
-        assertThat(result.getStatusCode(),is(HttpStatus.NO_CONTENT));
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void updateBrand_FindIdBrandUpdate_404NotFound() {
+        BrandPostVm brandPostVm = new BrandPostVm("samsung", "samsung", true);
+        ErrorVm errorVmExpected = new ErrorVm("404 NOT_FOUND", "Not Found", "Brand 9999 is not found", Collections.emptyList());
+
+        webTestClient.put().uri(BACK_OFFICE_URL + "/{id}", invalidId)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(BodyInserters.fromValue(brandPostVm))
+                .exchange()
+                .expectStatus().isNotFound()
+                .expectBody(ErrorVm.class).isEqualTo(errorVmExpected);
     }
 
     @Test
-    void deleteBrand_ValidCategory_Success(){
-        when(brandRepository.findById(1L)).thenReturn(Optional.of(brand1));
-        ResponseEntity<Void> result = brandController.deleteBrand(1L);
-        verify(brandRepository).deleteById(1L);
-        assertThat(result.getStatusCode(),is(HttpStatus.NO_CONTENT));
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void updateBrand_UpdateBrand_Success() {
+        BrandPostVm brandPostVm = new BrandPostVm("samsung", "samsung", true);
+        webTestClient.put().uri(BACK_OFFICE_URL + "/{id}", brandId)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(BodyInserters.fromValue(brandPostVm))
+                .exchange()
+                .expectStatus().isNoContent();
+        Optional<Brand> brand = brandRepository.findById(brandId);
+        assertTrue(brand.isPresent());
+        assertEquals("samsung", brand.get().getName());
+        assertEquals("samsung", brand.get().getSlug());
     }
 
     @Test
-    void deleteBrand_NotFoundCategory_ThrowNotFoundException(){
-        when(brandRepository.findById(1L)).thenReturn(Optional.empty());
-        assertThrows(NotFoundException.class, () -> brandController.deleteBrand(1L));
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void deleteBrand_ValidCategory_Success() {
+        webTestClient.delete().uri(BACK_OFFICE_URL + "/{id}", brandId).accept(MediaType.APPLICATION_JSON)
+                .exchange()
+                .expectStatus().isNoContent();
+        Optional<Brand> brand = brandRepository.findById(brandId);
+        assertFalse(brand.isPresent());
     }
 
     @Test
-    void deleteBrand_CategoryContainsProducts_ThrowBadRequestException(){
-        brand1.setProducts(List.of(new Product()));
-        when(brandRepository.findById(1L)).thenReturn(Optional.of(brand1));
-        assertThrows(BadRequestException.class, () -> brandController.deleteBrand(1L));
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void deleteBrand_NotFoundCategory_404NotFound() {
+        ErrorVm errorVmExpected = new ErrorVm("404 NOT_FOUND", "Not Found", "Brand 9999 is not found", Collections.emptyList());
+        webTestClient.delete().uri(BACK_OFFICE_URL + "/{id}", invalidId)
+                .accept(MediaType.APPLICATION_JSON)
+                .exchange().expectStatus().isNotFound()
+                .expectBody(ErrorVm.class).isEqualTo(errorVmExpected);
+    }
+
+    @Test
+    @WithMockUser(username = USERNAME, roles = {ROLE})
+    void deleteBrand_CategoryContainsProducts_400BadRequest() {
+        ErrorVm errorVmExpected = new ErrorVm("400 BAD_REQUEST", "Bad Request", "Please make sure this brand don't contains any product", Collections.emptyList());
+        Product product = Product.builder()
+                .name(String.format("product"))
+                .slug(String.format("slug"))
+                .isAllowedToOrder(true)
+                .isPublished(true)
+                .isFeatured(true)
+                .isVisibleIndividually(true)
+                .stockTrackingEnabled(true)
+                .brand(brand1)
+                .build();
+        productRepository.save(product);
+        brand1.setProducts(List.of(product));
+        brandRepository.save(brand1).getId();
+        webTestClient.delete().uri(BACK_OFFICE_URL + "/{id}", brandId)
+                .accept(MediaType.APPLICATION_JSON).exchange().expectStatus().isBadRequest()
+                .expectBody(ErrorVm.class).isEqualTo(errorVmExpected);
     }
 }
